2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: supported declaration-only interfaces

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala: make set_cname public

	* vapigen/valagidlparser.vala: set cname of fields if necessary,
	  fixes bug 526992

	* vapi/gdk-2.0.vapi: regenerated

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support type_name metadata attribute
	  for method parameters

	* vapi/packages/gtk+-2.0/: fix gtk_action_group_add_radio_actions
	  binding, fixes bug 526871

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: allow object creation expressions in
	  expression statements

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: handle access modifier for signals

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valaassignment.vala,
	  vala/valabinaryexpression.vala, vala/valaclass.vala,
	  vala/valanamespace.vala, vala/valaparser.vala,
	  vala/valascanner.vala, vala/valascope.vala,
	  vala/valasourcefile.vala, vala/valasourcelocation.vala,
	  vala/valatokentype.vala, vala/valatuple.vala,
	  vala/valaunaryexpression.vala, vala/valaunresolvedtype.vala:

	  Replace generated Vala scanner and parser by handwritten classes

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add GEnumClass and GEnumValue bindings

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Bump version to 0.3.1

2008-04-12  Jürg Billeter  <j@bitron.ch>

	* vapi/sqlite3.vapi: various improvements, patch by Evan Nemerson

2008-04-12  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix sscanf and add g_hash_table_remove_all
	  bindings, patch by Evan Nemerson

2008-04-07  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-04-07  Jürg Billeter  <j@bitron.ch>

	* NEWS, configure.ac: update for 0.2.0 release

2008-04-07  Jürg Billeter  <j@bitron.ch>
